# backend/routes/index.js
@@ -1,7 +1,10 @@
 const router = require("express").Router()
+const { authenticate } = require("../utils/AuthenticateToken")
 const authRoutes = require("./auth.controller")
+const employeeRoutes = require("./employee.controller")
 
 router.use("/auth", authRoutes)
+router.use('/employees', authenticate, employeeRoutes)
 
 module.exports = router
 
